--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>What The &Sigma;</title>
     <link rel="stylesheet" href="./index.css">
+    <script src="./client.js" defer></script>
 </head>
 <body>
-    <h1>What The &Sigma;</h1>
-    <script src="./client.js" defer></script>
+    <div id="dark">
+        <button class="modern button">Click Me</button>
+    </div>
+    <div id="light">
+        <div class="cartoon card"></div>
+        <button class="cartoon button" onclick="document.querySelector('div.cartoon').classList.toggle('active')">Click Me</button>
+    </div>
 </body>
 </html>
