--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>What The &Sigma;</title>
+    <title>Aaron Meier</title>
     <link rel="stylesheet" href="./index.css">
     <script src="./client.js" defer></script>
 </head>
